Removed use of DD4hep

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,15 +63,7 @@ IF( MARLIN_LCCD )
     ENDIF()
 ENDIF()
 
-OPTION( MARLIN_DD4HEP  "Set to ON to build Marlin with DD4hep" OFF )
-IF( MARLIN_DD4HEP )
-  FIND_PACKAGE( DD4hep )
-  IF( NOT DD4hep_FOUND )
-    MESSAGE( SEND_ERROR "DD4HEP not found. Please set MARLIN_DD4HEP to OFF or DD4hep_DIR=/path/to/DD4HEP" )
-  ENDIF()
-ENDIF()
-
-FOREACH( pkg AIDA CLHEP LCCD DD4hep )
+FOREACH( pkg AIDA CLHEP LCCD )
     IF( ${pkg}_FOUND )
         INCLUDE_DIRECTORIES( SYSTEM ${${pkg}_INCLUDE_DIRS} )
         #ADD_DEFINITIONS ( ${${pkg}_DEFINITIONS} )
