Setup MT option correctly in all CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,6 @@ INCLUDE( ilcsoft_default_settings )
 # required packages
 FIND_PACKAGE( LCIO REQUIRED )
 FIND_PACKAGE( GEAR REQUIRED )
-FIND_PACKAGE( Threads REQUIRED )
 
 # export Marlin_DEPENDS_INCLUDE_DIRS to MarlinConfig.cmake
 SET( Marlin_DEPENDS_INCLUDE_DIRS ${LCIO_INCLUDE_DIRS} ${GEAR_INCLUDE_DIRS} ${streamlog_INCLUDE_DIRS} )
@@ -88,6 +87,8 @@ IF( MARLIN_GUI )
     ADD_DEFINITIONS ( -DQT_NO_DEBUG )
 ENDIF()
 
+### SUPPORT FOR MULTI-THREADING #############################################
+OPTION( MARLIN_MT "Set to ON to build multi-threading support in Marlin" OFF )
 
 
 ### DOCUMENTATION ###########################################################
