Added empty MarlinMT application class with main function and compilation (if MARLIN_MT is set)

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -75,8 +75,6 @@ TARGET_LINK_LIBRARIES( Marlin ${CMAKE_DL_LIBS} MarlinXML ${Marlin_DEPENDS_LIBRAR
   ${AIDA_LIBRARIES} ${CLHEP_LIBRARIES} ${LCCD_LIBRARIES}
   ${DD4hep_LIBRARIES} ${DD4hep_COMPONENT_LIBRARIES} ${ROOT_LIBRARIES} )
 
-
-
 # ----- MarlinDumpPlugins executable ----------------------------------------------------
 ADD_EXECUTABLE( bin_MarlinDumpPlugins ./main/MarlinDumpPlugins.cc )
 SET_TARGET_PROPERTIES( bin_MarlinDumpPlugins PROPERTIES OUTPUT_NAME MarlinDumpPlugins )
@@ -91,27 +89,15 @@ TARGET_LINK_LIBRARIES( bin_Marlin Marlin )
 INSTALL( TARGETS bin_Marlin DESTINATION bin )
 # ----------------------------------------------------------------------------
 
-# ----- Marlin executable ----------------------------------------------------
-# ADD_EXECUTABLE( bin_Marlin ./src/Marlin.cc ./src/ProcessorLoader.cc )
-# # avoid name conflict between Marlin library and Marlin application
-# SET_TARGET_PROPERTIES( bin_Marlin PROPERTIES OUTPUT_NAME Marlin )
-# TARGET_LINK_LIBRARIES( bin_Marlin Marlin )
-# INSTALL( TARGETS bin_Marlin DESTINATION bin )
+# ----- MarlinMT executable ----------------------------------------------------
+IF( MARLIN_MT )
+  FIND_PACKAGE( Threads REQUIRED )
+  ADD_EXECUTABLE( bin_MarlinMT ./main/MarlinMT.cc )
+  SET_TARGET_PROPERTIES( bin_MarlinMT PROPERTIES OUTPUT_NAME MarlinMT )
+  TARGET_LINK_LIBRARIES( bin_MarlinMT Marlin ${CMAKE_THREAD_LIBS_INIT} )
+  INSTALL( TARGETS bin_MarlinMT DESTINATION bin )
+ENDIF()
 # ----------------------------------------------------------------------------
-
-# IF( MARLIN_MT )
-#   FIND_PACKAGE( Threads REQUIRED )
-# 
-#   # ----- MarlinMT executable ----------------------------------------------------
-#   ADD_EXECUTABLE( bin_MarlinMT ./src/concurrency/MarlinMT.cc )
-#   # avoid name conflict between MarlinMT library and MarlinMT application
-#   SET_TARGET_PROPERTIES( bin_MarlinMT PROPERTIES OUTPUT_NAME MarlinMT )
-# 
-#   TARGET_LINK_LIBRARIES( bin_MarlinMT Marlin ${CMAKE_THREAD_LIBS_INIT} )
-#   INSTALL( TARGETS bin_MarlinMT DESTINATION bin )
-# ENDIF()
-
-
 
 # ----- MarlinGUI ------------------------------------------------------------
 IF( MARLIN_GUI )
