Missing compilation of sources in concurrency directory

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -50,6 +50,7 @@ ENDIF()
 
 AUX_SOURCE_DIRECTORY( ./src library_sources )
 AUX_SOURCE_DIRECTORY( ./src/plugins library_sources )
+AUX_SOURCE_DIRECTORY( ./src/concurrency library_sources )
 AUX_SOURCE_DIRECTORY( ./tinyxml/src tinyxml_sources )
 IF( NOT MARLIN_DD4HEP )
     LIST( REMOVE_ITEM library_sources ./src/plugins/DD4hepGeometry.cc )
