Introduced new CMake option MARLIN_BOOK to find proper components for building the future book component of Marlin. Added compiler definition -DMARLIN_BOOK to switch on pre-processor flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,15 +13,18 @@ SET( ${PROJECT_NAME}_VERSION_MAJOR 1 )
 SET( ${PROJECT_NAME}_VERSION_MINOR 16 )
 SET( ${PROJECT_NAME}_VERSION_PATCH 0 )
 
-
+LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake )
 
 ### DEPENDENCIES ############################################################
-
-FIND_PACKAGE( ILCUTIL COMPONENTS ILCSOFT_CMAKE_MODULES streamlog ILCTEST REQUIRED )
-#FIND_PACKAGE( ILCSOFT_CMAKE_MODULES 1.11 REQUIRED )
-
+FIND_PACKAGE( ILCUTIL COMPONENTS ILCSOFT_CMAKE_MODULES streamlog REQUIRED )
 # load default settings from ILCSOFT_CMAKE_MODULES
+# nasty feature of iLCUtil: switch this OFF
+SET( USE_CXX11 OFF )
 INCLUDE( ilcsoft_default_settings )
+IF( NOT CMAKE_CXX_STANDARD )
+  # minimum standard required
+  SET( CMAKE_CXX_STANDARD 17 )
+ENDIF()
 
 
 # required packages
@@ -35,15 +38,33 @@ SET( Marlin_DEPENDS_LIBRARIES ${LCIO_LIBRARIES} ${streamlog_LIBRARIES} )
 
 INCLUDE_DIRECTORIES( SYSTEM ${Marlin_DEPENDS_INCLUDE_DIRS} )
 
+OPTION( MARLIN_BOOK  "Set to ON to build Marlin with book store functionality (requires ROOT7 !)" OFF )
 OPTION( MARLIN_DD4HEP "Set to ON to build Marlin with DD4hep" ON )
+
+IF( MARLIN_BOOK )
+  LIST( APPEND ROOT_COMPONENTS Core Hist RIO )
+  ADD_DEFINITIONS( -DMARLIN_BOOK )
+ENDIF()
+
 IF( MARLIN_DD4HEP )
-    FIND_PACKAGE( ROOT REQUIRED )
-    FIND_PACKAGE( DD4hep COMPONENTS DDRec DDParsers )
+  LIST( APPEND ROOT_COMPONENTS Geom Eve )
+ENDIF( )
+
+IF( ROOT_COMPONENTS )
+  # activate ROOT verbosity
+  SET( ROOT_CONFIG_DEBUG True )
+  # this already imports include directories, libraries
+  FIND_PACKAGE( ROOT 6.18 COMPONENTS ${ROOT_COMPONENTS} REQUIRED )
+  # check ROOT requirements
+  INCLUDE( MarlinCheckROOTRequirements )
+  MarlinCheckROOTRequirements()
+ENDIF()
+
+
+IF( MARLIN_DD4HEP )
+    FIND_PACKAGE( DD4hep COMPONENTS DDRec DDParsers REQUIRED )
     IF( NOT DD4hep_FOUND )
         MESSAGE( SEND_ERROR "DD4hep not found. Please set MARLIN_DD4HEP to OFF or DD4hep_DIR=/path/to/DD4hep" )
-    ENDIF()
-    IF( NOT ROOT_FOUND )
-        MESSAGE( SEND_ERROR "ROOT not found. Please set MARLIN_DD4HEP to OFF or ROOT_DIR=/path/to/ROOT" )
     ENDIF()
 ENDIF()
 
