Test CMake scripts reviewed. Added back Marlin -x tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,72 +1,70 @@
+#
+# CMakeLists.txt for MarlinMT unit tests
+#
+# @author: Remi Ete, DESY
+# @date: Oct 2019
+#
 
-### LIBRARY FOR RUNNING MARLIN TESTS ########################################
-
-# library name
-SET( libname marlintest )
+list( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake )
+include( MarlinUnitTesting )
 
 # include directories
-INCLUDE_DIRECTORIES( BEFORE ./include ${PROJECT_SOURCE_DIR}/source/include  ${PROJECT_BINARY_DIR} )
-#INSTALL_DIRECTORY( ./include DESTINATION . FILES_MATCHING PATTERN "*.h" )
+include_directories( BEFORE ./include ${PROJECT_SOURCE_DIR}/source/include  ${PROJECT_BINARY_DIR} )
 
-# add library
-AUX_SOURCE_DIRECTORY( ./src library_sources )
-ADD_SHARED_LIBRARY( ${libname} ${library_sources} )
+# add unit test library
+aux_source_directory( ./src library_sources )
+add_shared_library( MarlinUnitTest ${library_sources} )
+target_link_libraries( MarlinUnitTest Marlin )
 
-TARGET_LINK_LIBRARIES( ${libname} Marlin )
+# Add unit tests
+marlin_add_test (
+  test-thread-pool
+  BUILD_EXEC
+  REGEX_FAIL "TEST_FAILED"
+)
 
+marlin_add_test (
+  test-clock
+  BUILD_EXEC
+  REGEX_FAIL "TEST_FAILED"
+)
 
+marlin_add_test (
+  marlinminusx
+  COMMAND ${EXECUTABLE_OUTPUT_PATH}/Marlin
+  EXEC_ARGS -x test_marlinminusx.xml
+  REGEX_PASS NONE
+)
 
-function ( MARLIN_ADD_TEST test_name )
-  cmake_parse_arguments(ARG "BUILD_EXEC" "" "COMMAND;DEPENDS;EXEC_ARGS;REGEX_PASS;REGEX_PASSED;REGEX_FAIL;REGEX_FAILED;REQUIRES" ${ARGN} )
-  set ( missing )
-  set ( use_test 1 )
+marlin_add_test (
+  check-marlinminusx
+  COMMAND cat
+  EXEC_ARGS test_marlinminusx.xml
+  REGEX_PASS "<parameter name=\"RandomSeed\" value=\"1234567890\" />"
+  DEPENDS marlinminusx
+)
 
-  if ( ${ARG_BUILD_EXEC} )
-    add_executable ( ${test_name} main/${test_name}.cc )
-    target_link_libraries( ${test_name} Marlin )
-    target_include_directories( ${test_name} PUBLIC include )
-    set_target_properties( ${test_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin" )
-  endif()
+marlin_add_processor_test (
+  eventmodifier
+  STEERING_FILE ${CMAKE_CURRENT_SOURCE_DIR}/steer/eventmodifier.xml
+  INPUT_FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/simjob.slcio
+  REGEX_PASS "TestEventModifier modified 3 events in 1 run"
+)
 
-  set ( cmd ${ARG_COMMAND} )
-  if ( "${cmd}" STREQUAL "" )
-    if( ${ARG_BUILD_EXEC} )
-      set ( cmd ${CMAKE_BINARY_DIR}/bin/${test_name} )
-    else()
-      message( SEND_ERROR "No command no executable provided" )
-    endif()
-  endif()
+marlin_add_processor_test (
+  processoreventseeder
+  STEERING_FILE ${CMAKE_CURRENT_SOURCE_DIR}/steer/processoreventseeder.xml
+  INPUT_FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/simjob.slcio
+  REGEX_PASS "TestProcessorEventSeeder failed to register processor to event seed generator"
+  REGEX_FAIL "ERROR .TestProcessorEventSeeder.* Seeds don't match"
+)
 
-  set ( passed ${ARG_REGEX_PASS} ${ARG_REGEX_PASSED} )
-  if ( "${passed}" STREQUAL "NONE" )
-    unset ( passed )
-  elseif ( "${passed}" STREQUAL "" )
-    set ( passed "TEST_PASSED" )
-  endif()
-
-  set ( failed ${ARG_REGEX_FAIL} ${ARG_REGEX_FAILED} )
-  if ( "${failed}" STREQUAL "NONE" )
-    unset ( failed )
-  endif()
-
-  set ( args ${ARG_EXEC_ARGS} )
-  # if ( "${args}" STREQUAL "" )
-  #   set ( args ${test_name} )
-  # endif()
-  add_test(NAME t_${test_name} COMMAND ${cmd} ${args} )
-  if ( NOT "${passed}" STREQUAL "" )
-    set_tests_properties( t_${test_name} PROPERTIES PASS_REGULAR_EXPRESSION "${passed}" )
-  endif()
-  if ( NOT "${failed}" STREQUAL "" )
-    set_tests_properties( t_${test_name} PROPERTIES FAIL_REGULAR_EXPRESSION "${failed}" )
-  endif()
-  # Set test dependencies if present
-  foreach ( _dep ${ARG_DEPENDS} )
-    set_tests_properties( t_${test_name} PROPERTIES DEPENDS t_${_dep} )
-  endforeach()
-endfunction()
-
-MARLIN_ADD_TEST ( test-thread-pool BUILD_EXEC REGEX_FAIL "TEST_FAILED" )
-MARLIN_ADD_TEST ( test-clock BUILD_EXEC REGEX_FAIL "TEST_FAILED" )
-
-#INSTALL_SHARED_LIBRARY( ${libname} DESTINATION lib )
+marlin_add_processor_test (
+  includeandconstants
+  STEERING_FILE ${CMAKE_CURRENT_SOURCE_DIR}/steer/base-eventmodifier.xml
+  INPUT_FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/data/simjob.slcio
+    ${CMAKE_CURRENT_SOURCE_DIR}/steer/include-eventmodifier.xml
+    ${CMAKE_CURRENT_SOURCE_DIR}/steer/constants-eventmodifier.xml
+  REGEX_PASS "TestEventModifier modified 3 events in 1 run"
+)
