--- a/test/cmake/runmarlin.cmake.in
+++ b/test/cmake/runmarlin.cmake.in
@@ -1,13 +1,14 @@
 #
 #   run a Marlin job with local input files - needs to be configured with CMake...
-# 
+#
 #  users can set the following variables:
 #   MARLIN_DLL :           full path to Marlin plugin library(ies)
 #   MARLIN_INPUT_FILES:    files to be used for job - will be linked symbolically
 #   MARLIN_STEERING_FILE:  Marlin steering file
+#   MARLIN_ARGS:           Additional Marlin command line arguments
 #
 
-SET( ENV{MARLIN_DLL} "@MARLIN_DLL@" ) 
+SET( ENV{MARLIN_DLL} "@MARLIN_DLL@" )
 
 SET( LOCAL_INPUT_FILES_COPY_MODE create_symlink )
 
@@ -21,6 +22,9 @@ ENDFOREACH( input_file ${MARLIN_INPUT_FILES} )
 
 
 # execute marlin
-EXECUTE_PROCESS( COMMAND "@EXECUTABLE_OUTPUT_PATH@/Marlin" "@MARLIN_STEERING_FILE@" )
+EXECUTE_PROCESS(
+  COMMAND @EXECUTABLE_OUTPUT_PATH@/Marlin @MARLIN_STEERING_FILE@ @MARLIN_ARGS@
+  OUTPUT_VARIABLE RUN_OUTPUT
+)
 
-#EXECUTE_PROCESS( COMMAND "@EXECUTABLE_OUTPUT_PATH@/Marlin" "eventmodifier.xml" WORKING_DIRECTORY "@CMAKE_CURRENT_SOURCE_DIR@" ) 
+MESSAGE( "${RUN_OUTPUT}" )
